--- a/app/dockerfile
+++ b/app/dockerfile
@@ -1,37 +1,28 @@
-# Dockerfile for Frontend (Streamlit)
-# Use a base image with Streamlit pre-installed
-FROM python:3.8-slim-buster as frontend
+# Dockerfile for both Frontend (Streamlit) and Backend (FastAPI)
+
+# Use a base image with Python and other dependencies
+FROM python:3.8-slim-buster
+
+# Install supervisord
+RUN apt-get update && apt-get install -y supervisor && apt-get clean
+
+# Create a directory for logs
+RUN mkdir -p /var/log/supervisor
 
 # Set the working directory
-WORKDIR /app/frontend
+WORKDIR /app
 
-# Copy the Streamlit app files into the container
-COPY frontend/ .
+# Copy the Streamlit and FastAPI app files into the container
+COPY . .
 
 # Install any necessary dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Expose the Streamlit port
-EXPOSE 8501
+# Expose the ports for both Streamlit and FastAPI
+EXPOSE 8501 8000
 
-# Start the Streamlit app
-CMD ["streamlit", "run", "main.py"]
+# Copy the supervisord configuration file
+COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
-# Dockerfile for Backend (FastAPI)
-# Use a base image with Python pre-installed
-FROM python:3.8-slim-buster as backend
-
-# Set the working directory
-WORKDIR /app/backend
-
-# Copy the FastAPI app files into the container
-COPY backend/ .
-
-# Install any necessary dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Expose the FastAPI port
-EXPOSE 8000
-
-# Start the FastAPI app
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Start supervisord to manage both Streamlit and FastAPI
+CMD ["supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
