--- a/app/dockerfile
+++ b/app/dockerfile
@@ -16,7 +16,7 @@ WORKDIR /app
 COPY . .
 
 # Install any necessary dependencies
-RUN pip3 install -r requirements.txt
+RUN pip3 install -r requirement.txt
 
 # Expose the ports for both Streamlit and FastAPI
 EXPOSE 8501 8000
