--- a/app/dockerfile
+++ b/app/dockerfile
@@ -17,7 +17,7 @@ COPY . .
 
 # Install any necessary dependencies
 RUN pip install --upgrade pip
-RUN pip install -r requirement.txt
+RUN pip install --no-cache-dir -r requirement.txt
 
 # Expose the ports for both Streamlit and FastAPI
 EXPOSE 8501 8000
